Link on Privacy Policy page shows to index.html

--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -31,7 +31,7 @@
           <div class="u-container-layout u-container-layout-1">
             <p class="u-custom-font u-text u-text-grey-70 u-text-1"> This website does not collect any personal data. We do not use cookies or third-party services for analytics or other purposes.</p>
             <p class="u-text u-text-default u-text-grey-70 u-text-2">
-              <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-grey-70 u-btn-1" data-href="Home.html" href="Home.html">Back to the homepage</a>
+              <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-custom-font u-hover-none u-none u-text-grey-70 u-btn-1" data-href="index.html" href="index.html">Back to the homepage</a>
             </p>
           </div>
         </div>
