--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <div class="u-container-style u-layout-cell u-size-30 u-layout-cell-3">
                     <div class="u-container-layout u-container-layout-3">
                       <div class="u-align-left-xs u-social-icons u-spacing-10 u-social-icons-2">
-                        <a class="u-social-url" title="facebook" target="_blank" href="https://facebook.com/name"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-2"><img src="images/646094-d32b5ee5.png" alt=""></span>
+                        <a class="u-social-url" title="facebook" target="_blank" href="mailto:pottery@dorritochan.com"><span class="u-file-icon u-icon u-social-facebook u-social-icon u-text-white u-icon-2"><img src="images/646094-d32b5ee5.png" alt=""></span>
                         </a>
                       </div>
                       <p class="u-align-center u-custom-font u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-4"> pottery@dorritochan.com</p>
